updated material colours
